// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO should render Helmet props correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com/foo/bar",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com/foo/bar",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
    ]
  }
  titleTemplate={null}
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render Open Graph tags correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Open Graph Title",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render Twitter Card tags correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Twitter Card Title",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render alternate links correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
      Object {
        "href": "https://example.com/en-CA",
        "hreflang": "en-CA",
        "rel": "alternate",
      },
      Object {
        "href": "https://example.com/fr-CA",
        "hreflang": "fr-CA",
        "rel": "alternate",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render correctly with the minimal tags 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render image tags correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "http://example.com/ogp.jpg",
        "property": "og:image",
      },
      Object {
        "content": "image/jpeg",
        "property": "og:image:type",
      },
      Object {
        "content": 500,
        "property": "og:image:width",
      },
      Object {
        "content": 300,
        "property": "og:image:height",
      },
      Object {
        "content": "A shiny red apple with a bite taken out",
        "property": "og:image:alt",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "http://example.com/ogp.jpg",
        "name": "twitter:image",
      },
      Object {
        "content": "A shiny red apple with a bite taken out",
        "name": "twitter:image:alt",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;

exports[`SEO should render video tags correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en-US",
    }
  }
  link={
    Array [
      Object {
        "href": "https://example.com",
        "rel": "canonical",
      },
    ]
  }
  meta={
    Array [
      Object {
        "content": "Lorem Ipsum",
        "property": "og:title",
      },
      Object {
        "content": "https://example.com",
        "property": "og:url",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "property": "og:description",
      },
      Object {
        "content": "en-US",
        "property": "og:locale",
      },
      Object {
        "content": "http://example.com/movie.swf",
        "property": "og:video",
      },
      Object {
        "content": "application/x-shockwave-flash",
        "property": "og:video:type",
      },
      Object {
        "content": 500,
        "property": "og:video:width",
      },
      Object {
        "content": 300,
        "property": "og:video:height",
      },
      Object {
        "content": "A shiny red apple with a bite taken out",
        "property": "og:video:alt",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "Lorem Ipsum",
        "name": "twitter:title",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "twitter:description",
      },
      Object {
        "content": "Lorem ipsum sat delor.",
        "name": "description",
      },
      Object {
        "content": "foo,bar",
        "name": "keywords",
      },
    ]
  }
  titleTemplate=""
>
  <title>
    Lorem Ipsum
  </title>
</Helmet>
`;
